# whisper-mailbox

./: -H  .env.old  .gitignore  CHANGELOG.md  Cargo.toml  DEPLOYMENT.md  HOWTO.md  LICENSE  QUICK_START.md  README.md  WHISPER_ONBOARDING.md  package-lock.json  package.json  patch1.patch
bootstrap/: README.md  dht-node.js
docs/: ARCHITECTURE.md  mailbox_v0.1.md
docs/profiles/: bob.canon.json  bob.json  bob.ngrok.json  bob.signed.json
ens/: .env.example  package-lock.json  package.json  read_message.sh  tsconfig.json
ens/profiles/: alice.canon.json  alice.json  alice.signed.json  bob.canon.json  bob.json
ens/schemas/: whisper_contactcard_v0.1.json
ens/scripts/: _canonical_json.ts  _ens_abis.ts  canonicalize_json.ts  canonicalize_json.ts.bak  decrypt_envelope.ts  delegation_signed.json  (+33 more)
migrations/: 001_init.sql
openapi/: mailbox_v0.1.yaml
scripts/: create_and_onboard.sh  create_delegation_minimal.js  create_profile.sh  finalize_delegation_minimal.js  init_mailbox.sh  logs-mailbox.sh  poll_bob.sh  poll_bob.sh.old  register_deposit_token.sh  register_deposit_token.sh.old  run-mailbox.sh  stop-mailbox.sh  test_crypto.js  whisper_mailbox_setup.js  whisper_message_test.js  whisper_receive.js  whisper_receive_v2.js  whisper_receive_v3.js  whisper_send.js  whisper_send_v2.js  whisper_send_v3.js
src/: main.rs  main.rs.old
test/: test-compare-sessions.js  test-delivery-manager.js  test-double-ratchet.js  test-full-conversation.sh  test-kdf.js  test-ratchet-sync.js  test-real-scenario.js  test-session-manager.js  test-session-persistence.js  test-x3dh-symmetry.js
(+10 files in other folders)
