[package]
name = "whisper-mailbox"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6", features = ["trace"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"

base64 = "0.22"
bytes = "1"
time = { version = "0.3", features = ["std"] }

hmac = "0.12"
sha2 = "0.10"
rand = "0.8"

sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "macros", "migrate"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
